--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -27,9 +27,25 @@ jobs:
       - name: checkout
         run: |
           echo "checkout backend"
+  
+  dialyzer:
+    needs: backend_build
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        run: |
+          echo "checkout backend"
 
   backend_unit_tests:
-    needs: backend_lint
+    needs: [backend_lint, dialyzer]
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout
+        run: |
+          echo "checkout backend"
+
+  backend_integration_tests:
+    needs: [backend_lint, dialyzer]
     runs-on: ubuntu-latest
     steps:
       - name: checkout
