--- a/.github/workflows/ci_pipeline.yml
+++ b/.github/workflows/ci_pipeline.yml
@@ -1,16 +1,19 @@
-# Main workflow for CI pipeline that runs all the compilation, linter and
-# tests. This is a reusable workflow.
-name: CI Pipeline
+# Reusable workflow for CI pipeline that runs all the compilation, linter and
+# tests.
+name: CI Pipeline [Reusable Workflow]
 
 # Runs this workflow when:
 # * a pull request is opened or reopened or when the head branch of the pull
 #   request is updated
 # * there's a push or pull request to the "master" branch of the repository.
+# on:
+#   push:
+#     branches: ["main"]
+#   pull_request:
+#     types: [opened, reopened, synchronize]
+
 on:
-  push:
-    branches: ["main"]
-  pull_request:
-    types: [opened, reopened, synchronize]
+  workflow_call
 
 jobs:
 
