--- a/.github/workflows/reusable_ci.yml
+++ b/.github/workflows/reusable_ci.yml
@@ -2,13 +2,12 @@
 # tests.
 name: CI Pipeline [Reusable Workflow]
 
-on:
-  workflow_call
+on: workflow_call
 
 jobs:
 
   backend_build:
-    name: Backend / Build
+    name: Backend Build
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -16,7 +15,7 @@ jobs:
           echo "checkout backend"
 
   backend_lint:
-    name: Backend / Lint
+    name: Backend Lint
     needs: backend_build
     runs-on: ubuntu-latest
     steps:
@@ -25,7 +24,7 @@ jobs:
           echo "checkout backend"
   
   dialyzer:
-    name: Backend / Dialyzer
+    name: Backend Dialyzer
     needs: backend_build
     runs-on: ubuntu-latest
     steps:
@@ -34,7 +33,7 @@ jobs:
           echo "checkout backend"
 
   backend_unit_tests:
-    name: Backend / Unit Tests
+    name: Backend Unit Tests
     needs: [backend_lint, dialyzer]
     runs-on: ubuntu-latest
     steps:
@@ -43,7 +42,7 @@ jobs:
           echo "checkout backend"
 
   backend_integration_tests:
-    name: Backend / Integration Tests
+    name: Backend Integration Tests
     needs: [backend_lint, dialyzer]
     runs-on: ubuntu-latest
     steps:
@@ -52,7 +51,7 @@ jobs:
           echo "checkout backend"
 
   backend_elastisearch_tests:
-    name: Backend / ES Tests
+    name: Backend ES Tests
     needs: [backend_lint, dialyzer]
     runs-on: ubuntu-latest
     steps:
@@ -61,7 +60,7 @@ jobs:
           echo "checkout backend"
 
   frontend_build:
-    name: Frontend / Build
+    name: Frontend Build
     runs-on: ubuntu-latest
     steps:
       - name: checkout
@@ -69,7 +68,7 @@ jobs:
           echo "checkout frontend"
 
   frontend_lint:
-    name: Frontend / Lint
+    name: Frontend Lint
     needs: frontend_build
     runs-on: ubuntu-latest
     steps:
@@ -78,7 +77,7 @@ jobs:
           echo "checkout backend"
 
   frontend_unit_tests:
-    name: Frontend / Unit Tests
+    name: Frontend Unit Tests
     needs: frontend_lint
     runs-on: ubuntu-latest
     steps:
