--- a/.github/workflows/sandbox.yml
+++ b/.github/workflows/sandbox.yml
@@ -11,6 +11,8 @@ jobs:
   squad:
     name: Check for labels
     runs-on: ubuntu-latest
+    env:
+      GH_TOKEN: ${{ github.token }}
     steps:
       - run: |
           numOpenIssues="$(gh api graphql -F owner=$OWNER -F name=$REPO -f query='
